# iterate-hackathon

./: .gitignore  INTEGRATION_STT.md  LICENSE  README.md  docker-compose.yaml  index.html  manifest.json  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  run.sh  tsconfig.json  vite.config.ts
chrome_extension/: .gitignore  Dockerfile  index.html  manifest.json  package-lock.json  package.json  vite.config.ts
cultural_fit/: QUICK_START.md  README.md  SETUP.md  TESTING.md  TEST_RESULTS.md  culturalFitPrompt.ts  test-real-api.ts  test.ts
docs/: PRODUCTION_FLOW.md  TRIGGER_POINT.md
interview-analysis-system/: .dockerignore  .env.example  .gitignore  CONTRADICTION_FLOW.md  CONTRADICTION_FRONTEND_INTEGRATION.md  CULTURAL_FIT_FRONTEND_INTEGRATION.md  Dockerfile  FRONTEND_API.md  README.md  README_DOCKER.md  docker-compose.yml  index.html  index.js  manifest.json  package-lock.json  package.json  transcriptProcessor.js  tsconfig.json  vite.config.ts
pdf_engine/: .dockerignore  .env  .gitignore  Dockerfile  README.md  main_server.py  requirements.txt  scorecard_api.py  scoring_engine.py
question_generation/: .dockerignore  Dockerfile  docker-compose.yml  keyword_search.py  main.py  pyproject.toml  question_generation.py
server/: .gitignore  Dockerfile  README.md  index.js  package-lock.json  package.json  sttService.js  transcriptProcessor.js
src/: App.tsx  Home.tsx  TranscriptTab.tsx  background.ts  main.tsx
temp/: output_generator.py  requirements.txt  scoring_engine.py
tests/: README.md  culturalFitTestRunner.ts  runTest.sh
(+93 files in other folders)
