[project]
name = "iterate-hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "bs4>=0.0.2",
    "ddgs>=9.9.1",
    "ipykernel>=7.1.0",
    "langchain>=1.0.7",
    "langchain-anthropic>=1.0.4",
    "langchain-community>=0.4.1",
    "linkup-sdk>=0.9.0",
    "pypdf>=6.2.0",
    "requests>=2.32.5",
]
